applications/group-a/inventory/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
  labels:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/instance: inventory
    app.kubernetes.io/component: service
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: inventory
      app.kubernetes.io/instance: inventory
      app.kubernetes.io/component: service
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: inventory
        app.kubernetes.io/instance: inventory
        app.kubernetes.io/component: service
    spec:
      containers:
        - name: inventory
          image: registry.hochschule-burgenland.muehlbachler.xyz/swm2-ws2025-group-a-inventory/inventory:v1.0.0
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 384Mi
            limits:
              cpu: 500m
              memory: 512Mi
      imagePullSecrets:
        - name: registry-credentials
