applications/group-a/inventory/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
  labels:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/instance: inventory
    app.kubernetes.io/component: service
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: inventory
    app.kubernetes.io/instance: inventory
    app.kubernetes.io/component: service
